Fixed overflow issue

--- a/ui/src/css/style.css
+++ b/ui/src/css/style.css
@@ -1,5 +1,7 @@
 body{
     margin-bottom: 40px;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 .toast {
